<resources>
    <string name="app_name" translatable="false">Ini Gua</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Discover your perfect match and elevate your beauty with personalized outfit suggestions. Unleash the power of color harmony in fashion right at your fingertips!</string>
    <string name="title_welcome_page">Unlock effortless elegance with IniGua App.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Log Out</string>
    <string name="error_msg_email">Invalid email</string>
    <string name="error_msg_password">"Password must not be less than 8 characters"</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please enter an image file first.</string>
    <string name="descriptionLabel">Description</string>
    <string name="have_no_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="language">Language</string>
    <string name="signout">Sign Out</string>
    <string name="failed_open_camera">Failed open camera</string>
    <string name="failed_take_photo">Failed to capture image</string>
    <string name="map">Map</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="logout_message">Are you sure you want logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="use_location">Use my location</string>
    <string name="location_text" translatable="false">(%1$f, %2$f)</string>
    <string name="title_home">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alert">Untuk memastikan kinerja optimal fitur ini, harap memperhatikan kriteria berikut sebelum mengunggah gambar:\n\n1. Foto harus menampilkan satu orang dalam posisi berdiri.\n2. Dilarang menggunakan aksesoris di kepala, seperti topi dan masker.\n3. Mohon memaksimalkan pencahayaan dalam foto.\n4. Disarankan untuk menghindari penggunaan pakaian dengan banyak kombinasi warna.\n\nPemahaman dan pengikutan terhadap kriteria ini akan membantu memastikan hasil yang akurat dan memuaskan saat menggunakan fitur ini.</string>
</resources>